Spacing fix

--- a/css/views/index.less
+++ b/css/views/index.less
@@ -45,7 +45,8 @@
 
 .carousel {
 	.page-margins;
-	padding-bottom: 3rem;
+
+	&:not(:last-child) { padding-bottom: 3rem; }
 
 	.picker-carousel {
 		.std-xpadding;
